--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,10 @@
 buildscript {
     repositories {
-        mavenCentral()
+        jcenter()
     }
 
     dependencies {
-        classpath "com.android.tools.build:gradle:0.7.+"
+        classpath "com.android.tools.build:gradle:2.3.3"
     }
 }
 
@@ -13,6 +13,7 @@ allprojects {
     group = GROUP
 
     repositories {
-        mavenCentral()
+        google()
+        jcenter()
     }
 }
