--- a/samples/database-v1/build.gradle
+++ b/samples/database-v1/build.gradle
@@ -1,17 +1,17 @@
-apply plugin: 'android'
+apply plugin: 'com.android.application'
 
 dependencies {
     compile project(':library')
 }
 
 android {
-    buildToolsVersion '19.0.0'
-    compileSdkVersion 19
+    buildToolsVersion '26.0.2'
+    compileSdkVersion 26
 
     defaultConfig {
         minSdkVersion 8
-        packageName 'com.example.sqliteassethelper'
-        targetSdkVersion 19
+        applicationId 'com.example.sqliteassethelper'
+        targetSdkVersion 26
         versionCode 1
         versionName '1.0'
     }
