--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,11 @@
 buildscript {
     repositories {
-        jcenter()
+        maven { url 'http://repo1.maven.org/maven2' }
+        google()
     }
 
     dependencies {
-        classpath "com.android.tools.build:gradle:2.3.3"
+        classpath "com.android.tools.build:gradle:3.1.0"
     }
 }
 
@@ -14,6 +15,6 @@ allprojects {
 
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
 }
