--- a/samples/database-v13-upgrade/build.gradle
+++ b/samples/database-v13-upgrade/build.gradle
@@ -5,12 +5,12 @@ repositories {
 }
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion "26.0.2"
+    compileSdkVersion 27
+    buildToolsVersion "27.0.3"
 
     defaultConfig {
-        minSdkVersion 8
-        targetSdkVersion 26
+        minSdkVersion 15
+        targetSdkVersion 27
         versionCode 3
         versionName "3.0"
     }
@@ -23,5 +23,5 @@ android {
 }
 
 dependencies {
-    compile project(':library')
+    implementation project(':library')
 }
